log: 各処理にログ出力を追加
